--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+li {
+  list-style: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
